UI uplift and code cleanup

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 					<div class="col-md-3 col-sm-4 wow bounceInUp">
 						<div class="stat">
 							<div class="stat-icon">
-								<h2><i class="fa fa-code hidden-xs"></i><span class="timer" data-to="10000"></span>+</h2>
+								<h2><i class="fa fa-code hidden-xs"></i><span class="timer" data-to="50000"></span>+</h2>
 							</div>
 							<h3>Line of code</h3>
 						</div>
@@ -397,7 +397,7 @@
 
 					<div class="col-md-3 col-sm-4 resume-place wow bounceInRight">
 						<h4><i class="fa fa-suitcase"></i> Advanced Micro Devices</h4>
-						<i class="fa fa-calendar"></i> April 2017 - Present
+						<i class="fa fa-calendar"></i> April 2020 - Present
 						<hr class="visible-xs">
 					</div>
 
@@ -631,14 +631,14 @@
 
 			<div class="container">
 
-				<div class="row">
+				<div class="row justify-content-center">
 
-					<div class="col-md-12 headline wow bounceInLeft">
-						<h2>Contact Me</h2>
+					<div class="bounceInDown">
+						<h2>Let's Get In Touch!</h2>
 						<p>You can contact me through following.</p>
 					</div>
 
-					<div class="col-md-6 wow bounceInUp">
+					<div class="wow bounceInUp">
 
 						<p>In case you have any queries, drop me a line.</p>
 
@@ -652,45 +652,6 @@
 					</div>
 
 					<div class="col-md-6 wow bounceInRight">
-
-						<!-- <form id="contact-form" role="form">
-
-							<div class="form-group">
-								<label class="sr-only" for="c_name">Name</label>
-								<input type="text" id="c_name" class="form-control" name="c_name" placeholder="Name">
-							</div>
-
-							<div class="form-group">
-								<label class="sr-only" for="c_email">Email address</label>
-								<input type="email" id="c_email" class="form-control" name="c_email" placeholder="E-mail">
-							</div>
-
-							<div class="form-group">
-								<textarea class="form-control" id="c_message" name="c_message" rows="7" placeholder="Your message"></textarea>
-							</div>
-
-							<button type="submit" class="btn btn-custom-1">
-								<i class="fa fa-bullhorn icon-before"></i> Send it
-							</button>
-
-						</form> -->
-						<script>
-							function myMap() {
-  								var myCenter = new google.maps.LatLng(42.343410,-71.088986);
-  								var mapCanvas = document.getElementById("map");
-  								var mapOptions = {center: myCenter, zoom: 5};
-  								var map = new google.maps.Map(mapCanvas, mapOptions);
-  								var marker = new google.maps.Marker({position:myCenter});
-  								marker.setMap(map);
-							}
-						</script>
-
-						<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUg-RtAQraUrNDZXyU8tUkha-qMUFhxnY&callback=myMap"></script>
-
-					<div id="googleMap" style="width:500px;height:380px;"></div>
-						<iframe width="600" height="450" frameborder="0" style="border:0"
-						src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJLwPMoJm1RIYRetVp1EtGm10&key=..." allowfullscreen></iframe>
-						<div class="ajax-response"></div>
 
 					</div>
 
@@ -715,12 +676,10 @@
 							© 2018 Mansi Jain, All Rights Reserved.
 						</p>
 					</div>
-					<div class="col-md-9">
-						<center>
-							<p>
-								Made with <span style="color: #e25555;">&hearts;</span> in Austin.
-							</p>
-						</center>
+					<div class="col-md-9 justify-content-center">
+						<p>
+							Made with <span style="color: #e25555;">&hearts;</span> in Austin.
+						</p>
 					</div>
 
 				</div><!-- .row -->
