fix github link

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 							<h3>Social Profiles</h3>
 							<ul class="widget-social">
 								<li><a href="https://www.facebook.com/mansijain.nitrr" target="_blank"><i class="fa fa-facebook fa-fw"></i></a></li>
-								<li><a href="https://github.com/mansijain01" target="_blank"><i class="fa fa-github"></i></a></li>
+								<li><a href="https://github.com/jainmansi" target="_blank"><i class="fa fa-github"></i></a></li>
 								<li><a href="https://www.linkedin.com/in/mansijain9/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
